<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <EditText
        android:id="@+id/item_to_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_ticker_symbol"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/number_of_shares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:hint="@string/enter_number_of_shares"/>

    <Button
        android:id="@+id/add_item_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:text="@string/invest"/>

    <Button
        android:id="@+id/cancel_button_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/later"/>


</LinearLayout>