<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aliitani.midterm_itani.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:padding="25dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:labelFor="@+id/username_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_title"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/username_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_username"
            android:ems="10"
            android:maxLength="16"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:labelFor="@+id/pasword_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_title"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:ems="10"
            android:paddingBottom="15dp"
            android:inputType="textPassword"
            android:hint="@string/password_title"
            android:maxLength="16"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"/>
    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_title"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:linksClickable="true"
        android:onClick="forgotPassword"
        android:clickable="true"/>

    <TextView
        android:id="@+id/sign_up_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:textAlignment="center"
        android:layout_below="@+id/forgot_password_id"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:linksClickable="true"
        android:onClick="setSignUp"
        android:clickable="true"/>

</RelativeLayout>
