<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.example.aliitani.midterm_itani.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_title"
            android:textSize="25sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/get_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_email_button"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</RelativeLayout>
